# PYctochat

./: .gitignore  README.md  app.py  config.py  main.py  network.py  pyproject.toml
canvas/: __init__.py  _base.py  _naive.py  _polygon.py
drawing/: canvas.py  draw.py
helpers/: _stack.py
widgets/: chat.py  embed.py  keyboard.py  tools.py
